# dojo_lhama_POO

./: pyproject.toml
desafio1/toDo/: run.py
desafio1/toDo/components/: __init__.py  edificio.py  elevador.py
desafio2/toDo/: run.py
desafio2/toDo/controller/: __init__.py  gerenciador_de_elevadores.py
desafio2/toDo/model/: __init__.py  elevador.py
