[tool.poetry]
name = "dojo_lhama_poo"
version = "0.1.0"
description = ""
authors = ["Marcelo Grimberg <grimberg@petrobras.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
